--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-opencv-python-headless==4.8.1.78
+av==9.2.0
+deepspeech==0.9.3
+numpy==1.23.0
 pydub==0.25.1
-streamlit_webrtc~=0.47.7
-twilio~=8.10.1
-matplotlib
+streamlit==1.20.0
+streamlit_webrtc==0.45.0
+twilio~=8.1.0
