--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-av
-numpy==1.23.0
-pydub==0.25.1
-streamlit==1.20.0
-streamlit_webrtc==0.45.0
-twilio~=8.1.0
+streamlit                             
+streamlit_webrtc                                                           opencv-python                             
+mediapipe==0.8.9.1
