--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-streamlit                             
-streamlit_webrtc                                                           opencv-python                             
+av
+numpy==1.23.0
+streamlit==1.20.0
+streamlit_webrtc==0.45.0
+opencv-python                             
 mediapipe==0.8.9.1
