--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-av
-numpy==1.23.0
-streamlit==1.20.0
-streamlit_webrtc==0.45.0
-opencv-python                             
+opencv-python-headless==4.8.1.78
+pydub==0.25.1
+streamlit_webrtc~=0.47.7
+twilio~=8.10.1
+matplotlib                             
